# rust_server

./: .gitignore  Cargo.toml  readme.md
migrations/2019-01-25-193531_create_movies/: up.sql
migrations/2019-01-25-193556_create_actors/: up.sql
migrations/2019-01-25-194912_create_actors_movies/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  movie_models.rs  movie_routes.rs  schema.rs
