[package]
name = "rust-server"
version = "0.1.0"
authors = ["Nolan <nolan.hellyer@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
serde = "1.0.11"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
